-- MySQL Script generated by MySQL Workbench
-- Wed May 20 19:39:02 2026
-- Model: New Model    Version: 1.0
-- MySQL Workbench Forward Engineering

SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0;
SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0;
SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION';

-- -----------------------------------------------------
-- Schema mydb
-- -----------------------------------------------------
-- -----------------------------------------------------
-- Schema AV
-- -----------------------------------------------------

-- -----------------------------------------------------
-- Schema AV
-- -----------------------------------------------------
CREATE SCHEMA IF NOT EXISTS `AV` DEFAULT CHARACTER SET utf8mb4 COLLATE utf8mb4_0900_ai_ci ;
USE `AV` ;

-- -----------------------------------------------------
-- Table `AV`.`rol`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `AV`.`rol` (
  `id_rol` INT NOT NULL AUTO_INCREMENT,
  `nombre` VARCHAR(50) NOT NULL,
  `descripcion` VARCHAR(100) NOT NULL,
  `created_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP,
  `updated_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  `deleted_at` DATETIME NULL DEFAULT NULL,
  `created_by` INT NOT NULL,
  `updated_by` INT NULL DEFAULT NULL,
  `deleted_by` INT NULL DEFAULT NULL,
  PRIMARY KEY (`id_rol`))
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8mb4
COLLATE = utf8mb4_0900_ai_ci;

INSERT INTO `AV`.`rol` (`id_rol`, `nombre`, `descripcion`, `created_by`)
VALUES
  (1, 'Administrador', 'Acceso completo al sistema', 1),
  (2, 'Empleado', 'Acceso operativo limitado', 1)
ON DUPLICATE KEY UPDATE
  `nombre` = VALUES(`nombre`),
  `descripcion` = VALUES(`descripcion`),
  `deleted_at` = NULL,
  `deleted_by` = NULL;


-- -----------------------------------------------------
-- Table `AV`.`sucursal`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `AV`.`sucursal` (
  `id_sucursal` INT NOT NULL AUTO_INCREMENT,
  `nombre` VARCHAR(50) NOT NULL,
  `direccion` VARCHAR(100) NOT NULL,
  `codigo_postal` VARCHAR(10) NOT NULL,
  `telefono` VARCHAR(15) NOT NULL,
  `horario` VARCHAR(100) NOT NULL,
  `created_by` INT NOT NULL,
  `updated_by` INT NULL DEFAULT NULL,
  `deleted_by` INT NULL DEFAULT NULL,
  `created_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP,
  `updated_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  `deleted_at` DATETIME NULL DEFAULT NULL,
  PRIMARY KEY (`id_sucursal`))
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8mb4
COLLATE = utf8mb4_0900_ai_ci;

INSERT INTO `AV`.`sucursal` (`id_sucursal`, `nombre`, `direccion`, `codigo_postal`, `telefono`, `horario`, `created_by`)
VALUES
  (1, 'Sucursal Centro', 'Av. Principal 123', '62740', '5551112233', 'Lunes a viernes 09:00 a 18:00', 1)
ON DUPLICATE KEY UPDATE
  `nombre` = VALUES(`nombre`),
  `direccion` = VALUES(`direccion`),
  `codigo_postal` = VALUES(`codigo_postal`),
  `telefono` = VALUES(`telefono`),
  `horario` = VALUES(`horario`),
  `deleted_at` = NULL,
  `deleted_by` = NULL;


-- -----------------------------------------------------
-- Table `AV`.`empleado`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `AV`.`empleado` (
  `id_empleado` INT NOT NULL AUTO_INCREMENT,
  `nombre` VARCHAR(50) NOT NULL,
  `apellido_paterno` VARCHAR(45) NOT NULL,
  `apellido_materno` VARCHAR(45) NOT NULL,
  `telefono` VARCHAR(15) NOT NULL,
  `correo` VARCHAR(100) NOT NULL,
  `contrasena` VARCHAR(255) NOT NULL,
  `hora_entrada` TIME NOT NULL,
  `hora_salida` TIME NOT NULL,
  `created_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP,
  `updated_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  `deleted_at` DATETIME NULL DEFAULT NULL,
  `created_by` INT NULL DEFAULT NULL,
  `updated_by` INT NULL DEFAULT NULL,
  `deleted_by` INT NULL DEFAULT NULL,
  `rol_id` INT NOT NULL,
  `sucursal_id_sucursal` INT NOT NULL,
  PRIMARY KEY (`id_empleado`),
  UNIQUE INDEX `uk_empleado_correo` (`correo` ASC) VISIBLE,
  INDEX `idx_empleado_rol` (`rol_id` ASC) VISIBLE,
  INDEX `fk_empleado_sucursal1_idx` (`sucursal_id_sucursal` ASC) VISIBLE,
  CONSTRAINT `fk_empleado_rol`
    FOREIGN KEY (`rol_id`)
    REFERENCES `AV`.`rol` (`id_rol`)
    ON DELETE RESTRICT
    ON UPDATE CASCADE,
  CONSTRAINT `fk_empleado_sucursal1`
    FOREIGN KEY (`sucursal_id_sucursal`)
    REFERENCES `AV`.`sucursal` (`id_sucursal`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8mb4
COLLATE = utf8mb4_0900_ai_ci;

INSERT INTO `AV`.`empleado` (
  `id_empleado`, `nombre`, `apellido_paterno`, `apellido_materno`, `telefono`, `correo`, `contrasena`,
  `hora_entrada`, `hora_salida`, `rol_id`, `sucursal_id_sucursal`, `created_by`
)
VALUES
  (1, 'Admin', 'Sistema', 'AV', '5551112233', 'admin@av.com', '$2a$10$3ybwP10I3b6rHtQckqaN7.70pXPwiX.5kbbLMmhGInHA3ZJPeiCdG', '09:00:00', '18:00:00', 1, 1, 1),
  (2, 'Empleado', 'General', 'AV', '5551112244', 'empleado@av.com', '$2a$10$Rhos0oyEuyFqDuOg0hDOC.rJd7ivRUGyfw3FplmWxD/EVBnsJvjVq', '09:00:00', '18:00:00', 2, 1, 1)
ON DUPLICATE KEY UPDATE
  `nombre` = VALUES(`nombre`),
  `apellido_paterno` = VALUES(`apellido_paterno`),
  `apellido_materno` = VALUES(`apellido_materno`),
  `telefono` = VALUES(`telefono`),
  `correo` = VALUES(`correo`),
  `rol_id` = VALUES(`rol_id`),
  `sucursal_id_sucursal` = VALUES(`sucursal_id_sucursal`),
  `created_by` = COALESCE(`created_by`, VALUES(`created_by`)),
  `deleted_at` = NULL;


-- -----------------------------------------------------
-- Table `AV`.`categoria_material`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `AV`.`categoria_material` (
  `id_categoria_material` INT NOT NULL AUTO_INCREMENT,
  `nombre` VARCHAR(50) NOT NULL,
  `estado` ENUM('Activo', 'Inactivo') NOT NULL,
  `descripcion` VARCHAR(100) NULL DEFAULT NULL,
  `created_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP,
  `updated_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  `deleted_at` DATETIME NULL DEFAULT NULL,
  `created_by` INT NOT NULL,
  `updated_by` INT NULL DEFAULT NULL,
  `deleted_by` INT NULL DEFAULT NULL,
  PRIMARY KEY (`id_categoria_material`))
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8mb4
COLLATE = utf8mb4_0900_ai_ci;

INSERT INTO `AV`.`categoria_material` (`id_categoria_material`, `nombre`, `estado`, `descripcion`, `created_by`)
VALUES
  (1, 'Impresion', 'Activo', 'Materiales para impresion y acabados', 1),
  (2, 'Estructura', 'Activo', 'Materiales rigidos y de soporte', 1)
ON DUPLICATE KEY UPDATE
  `nombre` = VALUES(`nombre`),
  `estado` = VALUES(`estado`),
  `descripcion` = VALUES(`descripcion`),
  `deleted_at` = NULL,
  `deleted_by` = NULL;


-- -----------------------------------------------------
-- Table `AV`.`categoria_servicio`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `AV`.`categoria_servicio` (
  `id_categoria_servicio` INT NOT NULL AUTO_INCREMENT,
  `nombre` VARCHAR(50) NOT NULL,
  `descripcion` VARCHAR(100) NULL DEFAULT NULL,
  `estado` ENUM('Activo', 'Inactivo') NOT NULL,
  `created_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP,
  `updated_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  `deleted_at` DATETIME NULL DEFAULT NULL,
  `created_by` INT NOT NULL,
  `updated_by` INT NULL DEFAULT NULL,
  `deleted_by` INT NULL DEFAULT NULL,
  PRIMARY KEY (`id_categoria_servicio`))
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8mb4
COLLATE = utf8mb4_0900_ai_ci;

INSERT INTO `AV`.`categoria_servicio` (`id_categoria_servicio`, `nombre`, `descripcion`, `estado`, `created_by`)
VALUES
  (1, 'Impresion digital', 'Servicios de impresion para publicidad', 'Activo', 1),
  (2, 'Rotulacion', 'Servicios de rotulacion y vinil', 'Activo', 1)
ON DUPLICATE KEY UPDATE
  `nombre` = VALUES(`nombre`),
  `descripcion` = VALUES(`descripcion`),
  `estado` = VALUES(`estado`),
  `deleted_at` = NULL,
  `deleted_by` = NULL;


-- -----------------------------------------------------
-- Table `AV`.`cliente`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `AV`.`cliente` (
  `id_cliente` INT NOT NULL AUTO_INCREMENT,
  `nombre` VARCHAR(50) NOT NULL,
  `apellido_paterno` VARCHAR(45) NOT NULL,
  `apellido_materno` VARCHAR(45) NOT NULL,
  `tipo` ENUM('Frecuente', 'No frecuente') NOT NULL,
  `telefono` VARCHAR(15) NOT NULL,
  `tiene_credito` TINYINT NULL DEFAULT 0,
  `credito_actual` DECIMAL(10,2) NULL DEFAULT 0.00,
  `limite_credito` DECIMAL(10,2) NULL DEFAULT NULL,
  `direccion` VARCHAR(60) NULL DEFAULT NULL,
  `rfc` VARCHAR(15) NULL DEFAULT NULL,
  `codigo_postal` VARCHAR(10) NULL DEFAULT NULL,
  `razon_social` VARCHAR(30) NULL DEFAULT NULL,
  `created_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP,
  `updated_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  `deleted_at` DATETIME NULL DEFAULT NULL,
  `created_by` INT NOT NULL,
  `updated_by` INT NULL DEFAULT NULL,
  `deleted_by` INT NULL DEFAULT NULL,
  PRIMARY KEY (`id_cliente`),
  UNIQUE INDEX `id_cliente_UNIQUE` (`id_cliente` ASC) VISIBLE,
  UNIQUE INDEX `rfc_UNIQUE` (`rfc` ASC) VISIBLE,
  INDEX `fk_cliente_created_by_idx` (`created_by` ASC) VISIBLE,
  INDEX `fk_cliente_updated_by_idx` (`updated_by` ASC) VISIBLE,
  INDEX `fk_cliente_deleted_by_idx` (`deleted_by` ASC) VISIBLE,
  CONSTRAINT `fk_cliente_created_by`
    FOREIGN KEY (`created_by`)
    REFERENCES `AV`.`empleado` (`id_empleado`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_cliente_updated_by`
    FOREIGN KEY (`updated_by`)
    REFERENCES `AV`.`empleado` (`id_empleado`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_cliente_deleted_by`
    FOREIGN KEY (`deleted_by`)
    REFERENCES `AV`.`empleado` (`id_empleado`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8mb4
COLLATE = utf8mb4_0900_ai_ci;

INSERT INTO `AV`.`cliente` (
  `id_cliente`, `nombre`, `apellido_paterno`, `apellido_materno`, `tipo`, `telefono`, `tiene_credito`,
  `credito_actual`, `limite_credito`, `direccion`, `rfc`, `codigo_postal`, `razon_social`, `created_by`
)
VALUES
  (1, 'Carlos', 'Ramirez', 'Lopez', 'Frecuente', '5551112233', 1, 0.00, 3000.00, 'Av. Principal 123',
   'RALO900101XYZ', '62740', 'Carlos Ramirez Lopez', 1),
  (2, 'Cliente', 'Mostrador', 'General', 'No frecuente', '5550000000', 0, 0.00, NULL, NULL,
   NULL, NULL, NULL, 1)
ON DUPLICATE KEY UPDATE
  `nombre` = VALUES(`nombre`),
  `apellido_paterno` = VALUES(`apellido_paterno`),
  `apellido_materno` = VALUES(`apellido_materno`),
  `tipo` = VALUES(`tipo`),
  `telefono` = VALUES(`telefono`),
  `tiene_credito` = VALUES(`tiene_credito`),
  `credito_actual` = VALUES(`credito_actual`),
  `limite_credito` = VALUES(`limite_credito`),
  `direccion` = VALUES(`direccion`),
  `codigo_postal` = VALUES(`codigo_postal`),
  `razon_social` = VALUES(`razon_social`),
  `deleted_at` = NULL,
  `deleted_by` = NULL;


-- -----------------------------------------------------
-- Table `AV`.`corte_caja`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `AV`.`corte_caja` (
  `id_corte_caja` INT NOT NULL AUTO_INCREMENT,
  `fecha` DATE NOT NULL,
  `hora_inicio` TIME NOT NULL,
  `hora_fin` TIME NULL DEFAULT NULL,
  `saldo_inicial` DECIMAL(10,2) NOT NULL,
  `diferencia_saldo` DECIMAL(10,2) NULL DEFAULT NULL,
  `descripcion` VARCHAR(100) NULL DEFAULT NULL,
  `saldo_esperado` DECIMAL(10,2) NULL,
  `saldo_real` DECIMAL(10,2) NULL,
  `created_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP,
  `updated_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  `deleted_at` DATETIME NULL DEFAULT NULL,
  `created_by` INT NOT NULL,
  `updated_by` INT NULL DEFAULT NULL,
  `deleted_by` INT NULL DEFAULT NULL,
  `empleado_id` INT NOT NULL,
  PRIMARY KEY (`id_corte_caja`),
  INDEX `idx_corte_caja_empleado` (`empleado_id` ASC) VISIBLE,
  CONSTRAINT `fk_corte_caja_empleado`
    FOREIGN KEY (`empleado_id`)
    REFERENCES `AV`.`empleado` (`id_empleado`)
    ON DELETE RESTRICT
    ON UPDATE CASCADE)
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8mb4
COLLATE = utf8mb4_0900_ai_ci;


-- -----------------------------------------------------
-- Table `AV`.`pedido`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `AV`.`pedido` (
  `id_pedido` INT NOT NULL AUTO_INCREMENT,
  `fecha_pedido` DATETIME NOT NULL,
  `fecha_entrega` DATETIME NOT NULL,
  `estado` ENUM('Borrador', 'Pendiente', 'En proceso', 'Terminado', 'Entregado', 'Cancelado') NOT NULL,
  `total` DECIMAL(10,2) NOT NULL,
  `descripcion` VARCHAR(100) NULL DEFAULT NULL,
  `tipo_pedido` ENUM('Cotizacion', 'Pedido') NULL,
  `forma_pago` ENUM('Contado', 'Credito', 'Intercambio') NOT NULL,
  `motivo_cancelacion` VARCHAR(255) NULL,
  `created_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP,
  `updated_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  `deleted_at` DATETIME NULL DEFAULT NULL,
  `cliente_id` INT NOT NULL,
  `empleado_id` INT NOT NULL,
  `sucursal_id` INT NOT NULL,
  `created_by` INT NOT NULL,
  `updated_by` INT NULL DEFAULT NULL,
  `deleted_by` INT NULL DEFAULT NULL,
  PRIMARY KEY (`id_pedido`),
  INDEX `idx_pedido_cliente` (`cliente_id` ASC) VISIBLE,
  INDEX `idx_pedido_empleado` (`empleado_id` ASC) VISIBLE,
  INDEX `fk_pedido_sucursal1_idx` (`sucursal_id` ASC) VISIBLE,
  CONSTRAINT `fk_pedido_cliente`
    FOREIGN KEY (`cliente_id`)
    REFERENCES `AV`.`cliente` (`id_cliente`)
    ON DELETE RESTRICT
    ON UPDATE CASCADE,
  CONSTRAINT `fk_pedido_empleado`
    FOREIGN KEY (`empleado_id`)
    REFERENCES `AV`.`empleado` (`id_empleado`)
    ON DELETE RESTRICT
    ON UPDATE CASCADE,
  CONSTRAINT `fk_pedido_sucursal`
    FOREIGN KEY (`sucursal_id`)
    REFERENCES `AV`.`sucursal` (`id_sucursal`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8mb4
COLLATE = utf8mb4_0900_ai_ci;


-- -----------------------------------------------------
-- Table `AV`.`servicio`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `AV`.`servicio` (
  `id_servicio` INT NOT NULL AUTO_INCREMENT,
  `nombre` VARCHAR(60) NOT NULL,
  `descripcion` VARCHAR(100) NULL DEFAULT NULL,
  `estado` ENUM('Activo', 'Inactivo') NOT NULL,
  `categoria_servicio_id` INT NOT NULL,
  `created_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP,
  `updated_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  `deleted_at` DATETIME NULL DEFAULT NULL,
  `created_by` INT NOT NULL,
  `updated_by` INT NULL DEFAULT NULL,
  `deleted_by` INT NULL DEFAULT NULL,
  PRIMARY KEY (`id_servicio`),
  INDEX `idx_servicio_categoria` (`categoria_servicio_id` ASC) VISIBLE,
  CONSTRAINT `fk_servicio_categoria_servicio`
    FOREIGN KEY (`categoria_servicio_id`)
    REFERENCES `AV`.`categoria_servicio` (`id_categoria_servicio`)
    ON DELETE RESTRICT
    ON UPDATE CASCADE)
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8mb4
COLLATE = utf8mb4_0900_ai_ci;

INSERT INTO `AV`.`servicio` (`id_servicio`, `nombre`, `descripcion`, `estado`, `categoria_servicio_id`, `created_by`)
VALUES
  (1, 'Lona impresa', 'Impresion de lona por metro cuadrado', 'Activo', 1, 1),
  (2, 'Vinil de corte', 'Rotulacion en vinil por metro', 'Activo', 2, 1)
ON DUPLICATE KEY UPDATE
  `nombre` = VALUES(`nombre`),
  `descripcion` = VALUES(`descripcion`),
  `estado` = VALUES(`estado`),
  `categoria_servicio_id` = VALUES(`categoria_servicio_id`),
  `deleted_at` = NULL,
  `deleted_by` = NULL;


-- -----------------------------------------------------
-- Table `AV`.`detalle_pedido`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `AV`.`detalle_pedido` (
  `id_detalle_pedido` INT NOT NULL AUTO_INCREMENT,
  `cantidad` DECIMAL(10,2) NOT NULL,
  `precio_unitario` DECIMAL(10,2) NOT NULL,
  `subtotal` DECIMAL(10,2) NOT NULL,
  `unidad_detalle` ENUM('Piezas', 'Metros', 'Litros') NOT NULL,
  `pedido_id` INT NOT NULL,
  `servicio_id` INT NOT NULL,
  `created_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP,
  `updated_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  `deleted_at` DATETIME NULL DEFAULT NULL,
  `created_by` INT NOT NULL,
  `updated_by` INT NULL DEFAULT NULL,
  `deleted_by` INT NULL DEFAULT NULL,
  PRIMARY KEY (`id_detalle_pedido`),
  INDEX `idx_detalle_pedido_pedido` (`pedido_id` ASC) VISIBLE,
  INDEX `idx_detalle_pedido_servicio` (`servicio_id` ASC) VISIBLE,
  CONSTRAINT `fk_detalle_pedido_pedido`
    FOREIGN KEY (`pedido_id`)
    REFERENCES `AV`.`pedido` (`id_pedido`)
    ON DELETE RESTRICT
    ON UPDATE CASCADE,
  CONSTRAINT `fk_detalle_pedido_servicio`
    FOREIGN KEY (`servicio_id`)
    REFERENCES `AV`.`servicio` (`id_servicio`)
    ON DELETE RESTRICT
    ON UPDATE CASCADE)
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8mb4
COLLATE = utf8mb4_0900_ai_ci;


-- -----------------------------------------------------
-- Table `AV`.`material`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `AV`.`material` (
  `id_material` INT NOT NULL AUTO_INCREMENT,
  `nombre` VARCHAR(45) NOT NULL,
  `unidad` ENUM('Piezas', 'Metros', 'Litros') NOT NULL,
  `estado` ENUM('Disponible', 'No disponible') NOT NULL,
  `costo_unitario` DECIMAL(10,2) NOT NULL,
  `created_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP,
  `updated_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  `deleted_at` DATETIME NULL DEFAULT NULL,
  `categoria_material_id` INT NOT NULL,
  `created_by` INT NOT NULL,
  `updated_by` INT NULL DEFAULT NULL,
  `deleted_by` INT NULL DEFAULT NULL,
  PRIMARY KEY (`id_material`),
  INDEX `idx_material_categoria` (`categoria_material_id` ASC) VISIBLE,
  CONSTRAINT `fk_material_categoria_material`
    FOREIGN KEY (`categoria_material_id`)
    REFERENCES `AV`.`categoria_material` (`id_categoria_material`)
    ON DELETE RESTRICT
    ON UPDATE CASCADE)
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8mb4
COLLATE = utf8mb4_0900_ai_ci;

INSERT INTO `AV`.`material` (`id_material`, `nombre`, `unidad`, `estado`, `costo_unitario`, `categoria_material_id`, `created_by`)
VALUES
  (1, 'Lona front 13oz', 'Metros', 'Disponible', 45.00, 1, 1),
  (2, 'Vinil adhesivo', 'Metros', 'Disponible', 35.00, 1, 1)
ON DUPLICATE KEY UPDATE
  `nombre` = VALUES(`nombre`),
  `unidad` = VALUES(`unidad`),
  `estado` = VALUES(`estado`),
  `costo_unitario` = VALUES(`costo_unitario`),
  `categoria_material_id` = VALUES(`categoria_material_id`),
  `deleted_at` = NULL,
  `deleted_by` = NULL;


-- -----------------------------------------------------
-- Table `AV`.`inventario`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `AV`.`inventario` (
  `id_inventario` INT NOT NULL AUTO_INCREMENT,
  `stock_actual` DECIMAL(10,2) NOT NULL,
  `stock_minimo` DECIMAL(10,2) NOT NULL,
  `created_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP,
  `updated_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  `deleted_at` DATETIME NULL DEFAULT NULL,
  `material_id` INT NOT NULL,
  `sucursal_id` INT NOT NULL,
  `created_by` INT NOT NULL,
  `updated_by` INT NULL DEFAULT NULL,
  `deleted_by` INT NULL DEFAULT NULL,
  PRIMARY KEY (`id_inventario`),
  UNIQUE INDEX `uk_inventario_material_sucursal` (`material_id` ASC, `sucursal_id` ASC) VISIBLE,
  INDEX `idx_inventario_material` (`material_id` ASC) VISIBLE,
  INDEX `idx_inventario_sucursal` (`sucursal_id` ASC) VISIBLE,
  INDEX `fk_inventario_created_by_idx` (`created_by` ASC) VISIBLE,
  INDEX `fk_inventario_updated_by_idx` (`updated_by` ASC) VISIBLE,
  INDEX `fk_inventario_deleted_by_idx` (`deleted_by` ASC) VISIBLE,
  CONSTRAINT `fk_inventario_material`
    FOREIGN KEY (`material_id`)
    REFERENCES `AV`.`material` (`id_material`)
    ON DELETE RESTRICT
    ON UPDATE CASCADE,
  CONSTRAINT `fk_inventario_sucursal` 
    FOREIGN KEY (`sucursal_id`)
    REFERENCES `AV`.`sucursal` (`id_sucursal`)
    ON DELETE RESTRICT
    ON UPDATE CASCADE,
  CONSTRAINT `fk_inventario_created_by`
    FOREIGN KEY (`created_by`)
    REFERENCES `AV`.`empleado` (`id_empleado`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_inventario_updated_by`
    FOREIGN KEY (`updated_by`)
    REFERENCES `AV`.`empleado` (`id_empleado`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_inventario_deleted_by`
    FOREIGN KEY (`deleted_by`)
    REFERENCES `AV`.`empleado` (`id_empleado`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8mb4
COLLATE = utf8mb4_0900_ai_ci;

INSERT INTO `AV`.`inventario` (`id_inventario`, `stock_actual`, `stock_minimo`, `material_id`, `sucursal_id`, `created_by`)
VALUES
  (1, 100.00, 10.00, 1, 1, 1),
  (2, 80.00, 10.00, 2, 1, 1)
ON DUPLICATE KEY UPDATE
  `stock_actual` = VALUES(`stock_actual`),
  `stock_minimo` = VALUES(`stock_minimo`),
  `material_id` = VALUES(`material_id`),
  `sucursal_id` = VALUES(`sucursal_id`),
  `deleted_at` = NULL,
  `deleted_by` = NULL;


-- -----------------------------------------------------
-- Table `AV`.`movimiento_inventario`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `AV`.`movimiento_inventario` (
  `id_movimiento_inventario` INT NOT NULL AUTO_INCREMENT,
  `cantidad` DECIMAL(10,2) NOT NULL,
  `fecha` DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP,
  `tipo` ENUM('Entrada', 'Salida') NOT NULL,
  `motivo` VARCHAR(50) NOT NULL,
  `inventario_id` INT NOT NULL,
  `created_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP,
  `created_by` INT NOT NULL,
  PRIMARY KEY (`id_movimiento_inventario`),
  INDEX `idx_movimiento_inventario` (`inventario_id` ASC) VISIBLE,
  CONSTRAINT `fk_movimiento_inventario_inventario`
    FOREIGN KEY (`inventario_id`)
    REFERENCES `AV`.`inventario` (`id_inventario`)
    ON DELETE RESTRICT
    ON UPDATE CASCADE)
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8mb4
COLLATE = utf8mb4_0900_ai_ci;


-- -----------------------------------------------------
-- Table `AV`.`pago`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `AV`.`pago` (
  `id_pago` INT NOT NULL AUTO_INCREMENT,
  `monto` DECIMAL(10,2) NOT NULL,
  `fecha` DATE NOT NULL,
  `hora_pago` TIME NOT NULL,
  `referencia` VARCHAR(50) NOT NULL,
  `forma_pago` ENUM('Efectivo', 'Transferencia', 'Intercambio') NOT NULL,
  `concepto_pago` ENUM('Anticipo', 'Abono_credito', 'Liquidacion', 'Abono') NOT NULL,
  `created_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP,
  `updated_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  `deleted_at` DATETIME NULL DEFAULT NULL,
  `pedido_id` INT NOT NULL,
  `empleado_id_empleado` INT NOT NULL,
  `created_by` INT NOT NULL,
  `updated_by` INT NULL DEFAULT NULL,
  `deleted_by` INT NULL DEFAULT NULL,
  PRIMARY KEY (`id_pago`),
  INDEX `idx_pago_pedido` (`pedido_id` ASC) VISIBLE,
  INDEX `fk_pago_empleado1_idx` (`empleado_id_empleado` ASC) VISIBLE,
  CONSTRAINT `fk_pago_pedido`
    FOREIGN KEY (`pedido_id`)
    REFERENCES `AV`.`pedido` (`id_pedido`)
    ON DELETE RESTRICT
    ON UPDATE CASCADE,
  CONSTRAINT `fk_pago_empleado`
    FOREIGN KEY (`empleado_id_empleado`)
    REFERENCES `AV`.`empleado` (`id_empleado`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8mb4
COLLATE = utf8mb4_0900_ai_ci;


-- -----------------------------------------------------
-- Table `AV`.`servicio_material`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `AV`.`servicio_material` (
  `id_servicio_material` INT NOT NULL AUTO_INCREMENT,
  `cantidad_usada` DECIMAL(10,2) NOT NULL,
  `servicio_id` INT NOT NULL,
  `material_id` INT NOT NULL,
  `created_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP,
  `updated_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  `deleted_at` DATETIME NULL DEFAULT NULL,
  `created_by` INT NOT NULL,
  `updated_by` INT NULL DEFAULT NULL,
  `deleted_by` INT NULL DEFAULT NULL,
  PRIMARY KEY (`id_servicio_material`),
  UNIQUE INDEX `uk_servicio_material` (`servicio_id` ASC, `material_id` ASC) VISIBLE,
  INDEX `idx_servicio_material_servicio` (`servicio_id` ASC) VISIBLE,
  INDEX `idx_servicio_material_material` (`material_id` ASC) VISIBLE,
  UNIQUE INDEX `uq_servicio_material` (`material_id` ASC, `servicio_id` ASC) VISIBLE,
  CONSTRAINT `fk_servicio_material_material`
    FOREIGN KEY (`material_id`)
    REFERENCES `AV`.`material` (`id_material`)
    ON DELETE RESTRICT
    ON UPDATE CASCADE,
  CONSTRAINT `fk_servicio_material_servicio`
    FOREIGN KEY (`servicio_id`)
    REFERENCES `AV`.`servicio` (`id_servicio`)
    ON DELETE RESTRICT
    ON UPDATE CASCADE)
ENGINE = InnoDB
DEFAULT CHARACTER SET = utf8mb4
COLLATE = utf8mb4_0900_ai_ci;


-- -----------------------------------------------------
-- Table `AV`.`global_values`
-- -----------------------------------------------------
CREATE TABLE IF NOT EXISTS `AV`.`global_values` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `tipo` VARCHAR(45) NOT NULL,
  `nombre` VARCHAR(45) NOT NULL,
  `valor` LONGTEXT NOT NULL,
  `created_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP,
  `updated_at` DATETIME NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  `deleted_at` DATETIME NULL DEFAULT NULL,
  `created_by` INT NOT NULL,
  `updated_by` INT NULL DEFAULT NULL,
  `deleted_by` INT NULL DEFAULT NULL,
  PRIMARY KEY (`id`),
  UNIQUE INDEX `uk_global_values_tipo_nombre` (`tipo` ASC, `nombre` ASC))
ENGINE = InnoDB
COMMENT = '	';

INSERT INTO `AV`.`global_values` (`id`, `tipo`, `nombre`, `valor`, `created_by`)
VALUES
  (1, 'empresa', 'nombre_empresa', 'AV Publicidad', 1),
  (2, 'empresa', 'razon_social', 'AV Publicidad', 1),
  (3, 'empresa', 'telefono', '5551112233', 1),
  (4, 'empresa', 'correo', 'contacto@av.com', 1),
  (5, 'empresa', 'direccion_fiscal', 'Av. Principal 123, CP 62740', 1),
  (6, 'logo', 'nombre_logo', 'AV Publicidad', 1),
  (7, 'logo', 'tipo_imagen', 'image/png', 1),
  (8, 'logo', 'valor_url', '/assets/logo-av.png', 1)
ON DUPLICATE KEY UPDATE
  `tipo` = VALUES(`tipo`),
  `nombre` = VALUES(`nombre`),
  `valor` = VALUES(`valor`),
  `deleted_at` = NULL,
  `deleted_by` = NULL;


SET SQL_MODE=@OLD_SQL_MODE;
SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS;
SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS;


