classDiagram
direction LR

namespace ClientesVentas {
  class Cliente {
    +Integer idCliente
    +String nombre
    +String apellidoPaterno
    +String apellidoMaterno
    +String telefono
    +String tipo
    +Boolean tieneCredito
    +BigDecimal creditoActual
    +BigDecimal limiteCredito
    +String direccion
    +String rfc
    +String codigoPostal
    +String razonSocial
    +LocalDateTime createdAt
    +LocalDateTime updatedAt
    +LocalDateTime deletedAt
    +Integer createdBy
    +Integer updatedBy
    +Integer deletedBy
  }

  class Pedido {
    +Integer idPedido
    +LocalDateTime fechaPedido
    +LocalDateTime fechaEntrega
    +String estado
    +BigDecimal total
    +String descripcion
    +String tipoPedido
    +String formaPago
    +String motivoCancelacion
    +Integer clienteId
    +Integer empleadoId
    +Integer sucursalId
    +Integer createdBy
    +Integer updatedBy
    +Integer deletedBy
    +String estadoPago
    +BigDecimal totalPagado
    +BigDecimal saldoPendiente
  }

  class DetallePedido {
    +Integer idDetallePedido
    +BigDecimal cantidad
    +BigDecimal precioUnitario
    +BigDecimal subtotal
    +String unidadDetalle
    +Integer pedidoId
    +Integer servicioId
    +Integer createdBy
    +Integer updatedBy
    +Integer deletedBy
  }

  class Pago {
    +Integer idPago
    +BigDecimal monto
    +LocalDate fecha
    +LocalTime horaPago
    +String referencia
    +String formaPago
    +String conceptoPago
    +Integer pedidoId
    +Integer empleadoIdEmpleado
    +Integer createdBy
    +Integer updatedBy
    +Integer deletedBy
  }
}

namespace CatalogoAlmacen {
  class CategoriaServicio {
    +Integer idCategoriaServicio
    +String nombre
    +String descripcion
    +String estado
    +Integer createdBy
    +Integer updatedBy
    +Integer deletedBy
  }

  class Servicio {
    +Integer idServicio
    +String nombre
    +String descripcion
    +String estado
    +Integer categoriaServicioId
    +Integer createdBy
    +Integer updatedBy
    +Integer deletedBy
  }

  class ServicioMaterial {
    +Integer idServicioMaterial
    +BigDecimal cantidadUsada
    +Integer servicioId
    +Integer materialId
    +Integer createdBy
    +Integer updatedBy
    +Integer deletedBy
  }

  class CategoriaMaterial {
    +Integer idCategoriaMaterial
    +String nombre
    +String estado
    +String descripcion
    +Integer createdBy
    +Integer updatedBy
    +Integer deletedBy
  }

  class Material {
    +Integer idMaterial
    +String nombre
    +String unidad
    +String estado
    +BigDecimal costoUnitario
    +Integer categoriaMaterialId
    +Integer createdBy
    +Integer updatedBy
    +Integer deletedBy
  }

  class Inventario {
    +Integer idInventario
    +BigDecimal stockActual
    +BigDecimal stockMinimo
    +Integer materialId
    +Integer sucursalId
    +Integer createdBy
    +Integer updatedBy
    +Integer deletedBy
  }

  class MovimientoInventario {
    +Integer idMovimientoInventario
    +BigDecimal cantidad
    +LocalDateTime fecha
    +String tipo
    +String motivo
    +Integer inventarioId
    +Integer createdBy
  }
}

namespace ConfiguracionSeguridad {
  class Empleado {
    +Integer idEmpleado
    +String nombre
    +String apellidoPaterno
    +String apellidoMaterno
    +String telefono
    +String correo
    +String contrasena
    +LocalTime horaEntrada
    +LocalTime horaSalida
    +Integer rolId
    +Integer sucursalIdSucursal
    +Integer createdBy
    +Integer updatedBy
    +Integer deletedBy
  }

  class Rol {
    +Integer idRol
    +String nombre
    +String descripcion
    +Integer createdBy
    +Integer updatedBy
    +Integer deletedBy
  }

  class Sucursal {
    +Integer idSucursal
    +String nombre
    +String direccion
    +String codigoPostal
    +String telefono
    +String horario
    +Integer createdBy
    +Integer updatedBy
    +Integer deletedBy
  }

  class GlobalValue {
    +Integer id
    +String tipo
    +String nombre
    +String valor
    +Integer createdBy
    +Integer updatedBy
    +Integer deletedBy
  }
}

namespace CajaReportes {
  class CorteCaja {
    +Integer idCorteCaja
    +LocalDate fecha
    +LocalTime horaInicio
    +LocalTime horaFin
    +BigDecimal saldoInicial
    +BigDecimal diferenciaSaldo
    +String descripcion
    +BigDecimal saldoEsperado
    +BigDecimal saldoReal
    +Integer empleadoId
    +Integer createdBy
    +Integer updatedBy
    +Integer deletedBy
  }
}

namespace ServiciosAplicacion {
  class AuthService {
    +AuthResponse login(LoginRequest request)
    +LogoutResponse logout()
  }

  class RecuperacionContrasenaService {
    +void enviarCodigo(RecuperacionCodigoRequest request)
    +void validarCodigo(ValidarCodigoRecuperacionRequest request)
    +void restablecerContrasena(RestablecerContrasenaRequest request)
  }

  class JwtService {
    +String generarToken(Empleado empleado, String rol)
    +String obtenerCorreo(String token)
    +String obtenerRol(String token)
    +boolean esTokenValido(String token, Empleado empleado)
  }

  class NotaPedidoPdfService {
    +byte[] generarNotaPedido(Integer pedidoId)
  }
}

Cliente "1" <-- "0..*" Pedido : clienteId
Empleado "1" <-- "0..*" Pedido : empleadoId
Sucursal "1" <-- "0..*" Pedido : sucursalId
Pedido "1" <-- "0..*" DetallePedido : pedidoId
Servicio "1" <-- "0..*" DetallePedido : servicioId
Pedido "1" <-- "0..*" Pago : pedidoId
Empleado "1" <-- "0..*" Pago : empleadoIdEmpleado

CategoriaServicio "1" <-- "0..*" Servicio : categoriaServicioId
Servicio "1" <-- "0..*" ServicioMaterial : servicioId
Material "1" <-- "0..*" ServicioMaterial : materialId
CategoriaMaterial "1" <-- "0..*" Material : categoriaMaterialId
Material "1" <-- "0..*" Inventario : materialId
Sucursal "1" <-- "0..*" Inventario : sucursalId
Inventario "1" <-- "0..*" MovimientoInventario : inventarioId

Rol "1" <-- "0..*" Empleado : rolId
Sucursal "1" <-- "0..*" Empleado : sucursalIdSucursal
Empleado "1" <-- "0..*" CorteCaja : empleadoId

Empleado ..> AuthService : autentica
Empleado ..> RecuperacionContrasenaService : recupera contrasena
AuthService ..> JwtService : genera token
NotaPedidoPdfService ..> Pedido : consulta
